# rust_event_loop_py

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-python2  MANIFEST.in  Readme.md  Xargo.toml  build.rs  justfile  pyproject.toml  requirements-dev.txt  rustfmt.toml  setup.py  tox.ini
examples/: CMakeLists.txt  example  example.c  example.py
rust_py/: __init__.py  client.py  client_handle.py  event.py  event_type.py  logging.py  message.py  runner.py  runtime.py  subscriber.py  utils.py
src/: events.rs  lib.rs
src/ffi/: ffi_array.rs  ffi_client.rs  ffi_client_handle.rs  ffi_error.rs  ffi_helpers.rs  ffi_logging.rs  ffi_message.rs  ffi_null.rs  ffi_runner.rs  ffi_runtime.rs  ffi_subscriber.rs  mod.rs
src/subscriber/: mod.rs  subscriber.rs  subscriber_callback.rs  subscriber_config.rs  subscriber_error.rs  subscriber_event.rs  subscriber_event_type.rs  subscriber_server.rs  subscriber_server_handle.rs  subscribers.rs
