[package]
name = "rust_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_py"
crate-type = ["rlib", "cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1",features=["full"]}

[build-dependencies]
cbindgen = "0.17.0"